<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/preview"
    tools:context="com.example.abhinav.chatapp.LoginActivity">

    <TextView
        android:id="@+id/textViewSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/signin"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSigninEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="93dp"
        android:ems="10"
        android:hint="@string/enter_mail"
        android:inputType="textWebEmailAddress"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSigninPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSigninEmail" />

    <Button
        android:id="@+id/buttonSignIN"
        android:layout_width="148dp"
        android:layout_height="47dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="60dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/sign_in"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="@+id/etSigninPass"
        app:layout_constraintTop_toBottomOf="@+id/etSigninPass" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSigninPass" />
</android.support.constraint.ConstraintLayout>