<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/preview"
    tools:context="com.example.abhinav.chatapp.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/already_a_user_login"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="97dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etSignupEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/emailicon"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/enter_mail"
            android:inputType="textWebEmailAddress"
            android:textColor="@color/colorPrimaryDark"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="108dp" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwprd_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_text_input_layout"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/etSignUpPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/passwordicon"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/passwordicon"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryDark"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="164dp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/sign_up"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/et_otp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_otp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:drawableLeft="@drawable/otp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/otp"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/btn_otp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_otp"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:background="@android:color/darker_gray"
        android:text="Verify"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwprd_text_input_layout" />

</android.support.constraint.ConstraintLayout>
